force-app/main/default/objects/clariti__ArcGIS_Action_Configuration__mdt/clariti__ArcGIS_Action_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Define the actions to be used on the ArcGIS component.</description>
    <label>ArcGIS Action Configuration</label>
    <pluralLabel>ArcGIS Action Configurations</pluralLabel>
</CustomObject>