force-app/main/default/objects/clariti__ArcGIS_Action_Configuration__mdt/fields/clariti__Action_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>clariti__Action_Button_Label__c</fullName>
    <inlineHelpText>The max character length is 80.</inlineHelpText>
    <label>Action Button Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>