force-app/main/default/objects/clariti__ArcGIS_Action_Configuration__mdt/fields/clariti__ArcGIS_Map_Configuration__c.field-meta.xml
<CustomField>
    <fullName>clariti__ArcGIS_Map_Configuration__c</fullName>
    <label>ArcGIS Map Configuration</label>
    <referenceTo>clariti__ArcGIS_Map_Configuration__mdt</referenceTo>
    <relationshipLabel>ArcGIS Action Configurations</relationshipLabel>
    <relationshipName>ArcGIS_Action_Configurations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>