force-app/main/default/objects/clariti__ArcGIS_Action_Configuration__mdt/fields/clariti__Available_Objects_for_Action__c.field-meta.xml
<CustomField>
    <fullName>clariti__Available_Objects_for_Action__c</fullName>
    <description>A comma-separated list of object API names to which the custom action is available.</description>
    <inlineHelpText>Enter a comma-separated list of object API names.</inlineHelpText>
    <label>Available Objects for Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>