force-app/main/default/objects/clariti__ArcGIS_Action_Configuration__mdt/fields/clariti__ESRI_Layer_Names__c.field-meta.xml
<CustomField>
    <fullName>clariti__ESRI_Layer_Names__c</fullName>
    <description>A comma-separated list of ESRI layer names to which the custom action is available.</description>
    <inlineHelpText>Enter a comma-separated list of ESRI layer names which are configured for the associated map.</inlineHelpText>
    <label>ESRI Layer Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>