force-app/main/default/objects/clariti__ArcGIS_Action_Configuration__mdt/fields/clariti__Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>clariti__Flow_API_Name__c</fullName>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>