force-app/main/default/objects/clariti__ArcGIS_Action_Configuration__mdt/fields/clariti__Flow_Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>clariti__Flow_Namespace_Prefix__c</fullName>
    <label>Flow Namespace Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>