force-app/main/default/objects/clariti__ArcGIS_Action_Configuration__mdt/fields/clariti__Order__c.field-meta.xml
<CustomField>
    <fullName>clariti__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>